# miniterion

./: .gitignore  CHANGELOG.md  README.md  cabal.project  miniterion.cabal  stack.yaml
.github/workflows/: cabal-install.yml  ci.yml  stack.yml
bench/: Main.hs
data/: template.html
miniterion-compare/: CHANGELOG.md  miniterion-compare.cabal
miniterion-compare/app/: Main.hs
src/: Miniterion.hs
test/: Main.hs
